tests/type-errors/expr_method_asset_addupdate_missing_field.arl
archetype expr_method_asset_addupdate_missing_field

asset my_asset identified by id {
  id : string;
  value : int = 0;
  toto : int;
} initialized by {
  {"id0"; 0; 4};
  {"id1"; 1; 4};
  {"id2"; 2; 4}
}

variable res : int = 0

entry exec () {
  effect {
    my_asset.addupdate("id2", {value += 3})
  }
}
